[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/level/_base/_BaseAccess.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/font_size_25.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/level/tex_access_square.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[node name="Access" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="EnterSound" type="AudioStreamPlayer2D" parent="."]

[node name="ExitSound" type="AudioStreamPlayer2D" parent="."]

[node name="AccessUI" type="CanvasLayer" parent="."]

[node name="Label" type="RichTextLabel" parent="AccessUI"]
visible = false
margin_left = 30.0
margin_top = 500.0
margin_right = 550.0
margin_bottom = 700.0
custom_fonts/normal_font = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Access_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Access_body_exited"]
